--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src='https://webchat.botframework.com/embed/wb-cl-1022?s=3U-aK6mb5-4.oHmcgksb7Xuz2-AbbujZzER3FT4dUvxRgmjUbal1QuM'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src='https://webchat.botframework.com/embed/wbcl1022?s=zhxwWHS8Xbs._XVXjnxPqCJJytk8aDG3DA77QdsUNJR_yrZh4zo0f6c'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
